# transaction-state

./: Cargo.toml  README.md
examples/order-ticket/: Readme.md  docker-compose.yml  main.rs  resumer.rs  runner.rs  transaction.rs
examples/order-ticket/definitions/: existing_order.rs  full_order.rs  mod.rs
examples/order-ticket/migrations/: 20231121202033_initial.sql
examples/order-ticket/models/: email.rs  error.rs  mod.rs  order.rs  ticket.rs
examples/order-ticket/services/: db_transaction.rs  mod.rs  order.rs  remote.rs  sqlx_persister.rs  ticket.rs
examples/order-ticket/states/: existing_order.rs  full_order.rs
src/: helpers.rs  lib.rs  main.rs
src/definitions/: mod.rs  saga.rs  saga_definition.rs  saga_state.rs
src/persisters/: blackhole.rs  in_memory.rs  mod.rs  persister.rs
