[package]
name = "transaction-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-trait = "0.1.74"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
rand = "0.8"
sqlx = { version = "0.7", features = [
    "postgres",
    "uuid",
    "chrono",
    "runtime-tokio",
    "migrate",
] }
env_logger = "0.10.1"
